@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
-   "$Id: printers.xml,v 1.167 2011/11/17 12:47:41 gernot2270 Exp $"
+   "$Id: printers.xml,v 1.168 2011/11/17 12:57:35 gernot2270 Exp $"
 
    XML description of printers known to libgutenprint
    You can add additional printers here, but the underlying driver has
@@ -266,6 +266,7 @@
       <printer translate="name" name="Canon i80" driver="bjc-i80"   manufacturer="Canon" model="2000080" parameters="density_800_params" foomaticid="Canon-i80" />
       <printer translate="name" name="Canon i250" driver="bjc-i250" manufacturer="Canon" model="2000250" parameters="density_800_params" foomaticid="Canon-i250" />
       <printer translate="name" name="Canon i320" driver="bjc-i320" manufacturer="Canon" model="2000320" parameters="density_800_params" foomaticid="Canon-i320" />
+      <printer translate="name" name="Canon i350" driver="bjc-i350" manufacturer="Canon" model="2000250" parameters="density_800_params" foomaticid="Canon-i350" />
       <printer translate="name" name="Canon i560" driver="bjc-i560" manufacturer="Canon" model="2000560" parameters="gamma_6_density_800_params" foomaticid="Canon-i560" />
       <printer translate="name" name="Canon i850" driver="bjc-i850" manufacturer="Canon" model="3003000" parameters="PIXMA_iP4000_params" foomaticid="Canon-i850" />
       <printer translate="name" name="Canon i860" driver="bjc-i860" manufacturer="Canon" model="3004000" parameters="PIXMA_iP4000_params" foomaticid="Canon-i860" />
